# curl

./: Makefile  Makefile.am  Makefile.dist  Makefile.in  acinclude.m4  buildconf  buildconf.bat  configure.ac  configure.in  curl-config.in  curl-style.el  curl_631_general.patch  maketgz  mkinstalldirs  reconf  reentrant.m4  sample.emacs  testcurl.sh
ares/: Makefile.dj  Makefile.in  Makefile.m32  Makefile.msvc  Makefile.netware  Makefile.vc6  aclocal.m4  acountry.c  adig.c  ahost.c  ares.h  ares__close_sockets.c  ares__get_hostent.c  ares__read_line.c  ares__timeval.c  ares_build.h.dist  ares_build.h.in  ares_cancel.3  ares_cancel.c  ares_destroy.3  ares_destroy.c  ares_dns.h  ares_dup.3  ares_expand_name.3  ares_expand_name.c  ares_expand_string.c  ares_fds.3  ares_fds.c  ares_free_errmem.3  ares_free_errmem.c  ares_free_hostent.3  ares_free_hostent.c  ares_free_string.3  ares_free_string.c  ares_gethostbyaddr.3  ares_gethostbyaddr.c  ares_gethostbyname.3  ares_gethostbyname.c  ares_getnameinfo.3  ares_getnameinfo.c  (+56 more)
docs/: BUGS  Makefile.am  curl-config.1  curl.1  curl_easy_cleanup.3  curl_easy_duphandle.3  curl_easy_getinfo.3  curl_easy_init.3  curl_easy_perform.3  curl_easy_setopt.3  curl_escape.3  curl_formadd.3  curl_formfree.3  curl_formparse.3  curl_getdate.3  curl_getenv.3  curl_global_cleanup.3  curl_global_init.3  curl_mprintf.3  curl_multi_add_handle.3  curl_multi_cleanup.3  curl_multi_fdset.3  curl_multi_info_read.3  curl_multi_init.3  curl_multi_perform.3  curl_multi_remove_handle.3  curl_slist_append.3  curl_slist_free_all.3  curl_strequal.3  curl_unescape.3  curl_version.3  libcurl-the-guide  libcurl.3  libcurl.5
docs/examples/: 10-at-a-time.c  Makefile.am  Makefile.example  Makefile.m32  anyauthput.c  chkspeed.c  curlgtk.c  debug.c  fileupload.c  fopen.c  ftp3rdparty.c  ftpget.c  ftpgetresp.c  ftpupload.c  ftpuploadresume.c  getinfo.c  getinmemory.c  ghiper.c  hiperfifo.c  htmltitle.cc  http-post.c  httpput.c  https.c  makefile.dj  multi-app.c  multi-debugcallback.c  multi-double.c  multi-post.c  multi-single.c  multithread.c  persistant.c  post-callback.c  postit.c  postit2.c  sepheaders.c  simple.c  simplepost.c  simplessl.c  smooth-gtk-thread.c  synctime.c  (+1 more)
docs/libcurl/: Makefile.am  curl_easy_cleanup.3  curl_easy_duphandle.3  curl_easy_getinfo.3  curl_easy_init.3  curl_easy_perform.3  curl_easy_reset.3  curl_easy_setopt.3  curl_easy_strerror.3  curl_easy_unescape.3  curl_escape.3  curl_formadd.3  curl_formfree.3  curl_formget.3  curl_formparse.3  curl_getdate.3  curl_getenv.3  curl_global_cleanup.3  curl_global_init.3  curl_mprintf.3  curl_multi_add_handle.3  curl_multi_cleanup.3  curl_multi_fdset.3  curl_multi_info_read.3  curl_multi_init.3  curl_multi_perform.3  curl_multi_remove_handle.3  curl_multi_setopt.3  curl_multi_socket.3  curl_multi_strerror.3  curl_multi_timeout.3  curl_share_cleanup.3  curl_share_init.3  curl_share_setopt.3  curl_share_strerror.3  curl_slist_append.3  curl_slist_free_all.3  curl_strequal.3  curl_unescape.3  curl_version.3  (+7 more)
hiper/: hiper.c  hipev.c  shiper.c
java/: javacurl.c
lib/: Makefile  Makefile.Watcom  Makefile.am  Makefile.b32  Makefile.in  Makefile.m32  Makefile.netware  Makefile.vxworks  README.ares  README.curlx  README.memoryleak  amigaos.c  amigaos.h  arpa_telnet.h  base64.c  base64.h  base64_krb.h  ca-bundle.crt  ca-bundle.h.in  config-amigaos.h  config.dj  (+149 more)
multi/: Makefile.am  app.c  double.c  single.c
tests/libtest/: Makefile.am  first.c  lib502.c  lib503.c  lib504.c  lib505.c  lib506.c  lib507.c  lib509.c  lib517.c  lib518.c  lib525.c  lib526.c  lib530.c  lib533.c  lib536.c  lib537.c  lib539.c  lib540.c  lib541.c  lib542.c  lib547.c  lib552.c  lib553.c  lib554.c  lib555.c  lib556.c  lib557.c  lib558.c  lib560.c  lib564.c  lib566.c  test.h  testutil.c  testutil.h
(+75 files in other folders)
