#
# $Id: Makefile.am,v 1.33 2005-01-31 18:22:40 bagder Exp $
#

AUTOMAKE_OPTIONS = foreign no-dependencies

EXTRA_DIST = README curlgtk.c sepheaders.c simple.c postit2.c		\
 persistant.c ftpget.c Makefile.example multithread.c getinmemory.c	\
 ftpupload.c httpput.c simplessl.c ftpgetresp.c http-post.c		\
 post-callback.c multi-app.c multi-double.c multi-single.c		\
 multi-post.c fopen.c simplepost.c makefile.dj curlx.c https.c		\
 multi-debugcallback.c fileupload.c getinfo.c ftp3rdparty.c debug.c	\
 anyauthput.c htmltitle.cc

all:
	@echo "done"
